@@ -2,7 +2,7 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [libfguid],
- [20130317],
+ [20130413],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
@@ -80,6 +80,11 @@ dnl Set the date for the spec file
 AC_SUBST(
  [SPEC_DATE],
  [`date +"%a %b %e %Y" 2> /dev/null`])
+
+dnl Set the current working directory for PackageMaker files
+AC_SUBST(
+ [PWD],
+ [`pwd`])
 
 dnl Have configure make the Makefiles
 AC_CONFIG_FILES([Makefile])
